# platform.core.appfw.app-checker

./: CMakeLists.txt  app-checker-server.pc.in  app-checker.pc.in
TC/unit/: Makefile  tslist  utc_ApplicationFW_ac_check_launch_privilege_func.c  utc_ApplicationFW_ac_register_launch_privilege_func.c  utc_ApplicationFW_ac_unregister_launch_privilege_func.c  utc_MODULE_API_func.c.in
debian/: changelog  control  libapp-checker-0.install.in  libapp-checker-0.postinst  libapp-checker-dev.install.in  libapp-checker-server-0.install.in  libapp-checker-server-0.postinst  libapp-checker-server-dev.install.in  rules
include/: ac_sock.h  app-checker-server.h  app-checker.h  internal.h
packaging/: app-checker.changes  app-checker.spec
src/: ac_lib.c  ac_server.c  ac_sock.c
